namespace HireSphere.API.DTOs
{
    public class CandidateProfileDto
    {
        public int Id { get; set; }

        public int UserId { get; set; }

        public string FullName { get; set; } = string.Empty;

        public string PhoneNumber { get; set; } = string.Empty;

        public string Address { get; set; } = string.Empty;

        public string Skills { get; set; } = string.Empty;

        public string ResumePath { get; set; } = string.Empty;
    }
}